export interface Song {
    name: string;
    artist: string;
    offset: number;
    songPartsPath: string[];
}
